# psidyn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: api.md  concepts.md  examples.md  getting_started.md  index.md
experiments/PersuasionForGood/: persuasion_analysis.R  persuasion_analysis.py  persuasion_compute_surprisal.py  persuasion_precheck_analysis.R  persuasion_prechecks.py
experiments/aae/: aae_analysis.R  aae_experiment.tex  compute_pid_aae.py  compute_premise_similarity.py  explore_aae_corpus.py
experiments/llm-rigidity/: 1_create_batch.py  2_submit_batch.py  3_status_and_retrieve.py  4_parse_conversations.py  latest_batch_id.txt  llm_rigidity_analysis.py  llm_rigidity_analysis_run.sh  ste_analysis.R
src/psidyn/: __init__.py  coinfo.py  pid.py  te.py  trident.py
tests/: __init__.py  conftest.py  test_coinfo.py  test_logic_gates_pid.py  test_pid.py  test_sequence_building.py  test_trident.py
